async_pub_sub_macros/tests/fail/derive_subscriber_on_unit_struct.rs
use async_pub_sub_macros::DeriveSubscriber;

#[derive(DeriveSubscriber)]
struct InvalidSubscriber;

fn main() {}
