async_pub_sub_macros/tests/fail/derive_subscriber_on_unit_struct.stderr
error: DeriveSubscriber macro only supports structs with named fields
 --> tests/fail/derive_subscriber_on_unit_struct.rs:4:1
  |
4 | struct InvalidSubscriber;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
